--- a/src/components/hos/header/header.scss
+++ b/src/components/hos/header/header.scss
@@ -1,4 +1,4 @@
-$background-color: #0275d8;
+$background-color: #cfcfcf;
 $color: #fff;
 
 .container {
@@ -12,6 +12,12 @@ $color: #fff;
     }
     display: grid;
     grid-template-columns: 2fr 5fr .5fr 2fr;
+    padding: {
+        top: .5rem;
+        right: 1.5rem;
+        bottom: .5rem;
+        left: .5rem;
+    };
         
 }
     
