Header class name changed

--- a/src/components/hos/header/header.scss
+++ b/src/components/hos/header/header.scss
@@ -1,7 +1,7 @@
 $background-color: #cfcfcf;
 $color: #fff;
 
-.container {
+.Header__container {
     width: 90%;
     background-color: $background-color;
     margin: {
