--- a/src/components/hos/header/Favorite/Favorite.scss
+++ b/src/components/hos/header/Favorite/Favorite.scss
@@ -1,13 +1,28 @@
 .favorite {
-    a {
-        width: 2.5rem;
-        display: flex;
-        cursor: pointer;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     p {
-        padding: {
-            top: .5rem;
-        };
+        flex-direction: row;
+        justify-content: center;
+        button {
+            width: 3rem;
+            height: 3rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            background-color: #d33131;
+            color: #fff;
+            margin: 0 auto;
+            cursor: pointer;
+            span {
+                font-size: 1.3rem;
+            };
+        }
     }
+    
     
 }
