description's style updated

--- a/src/components/hos/Footer/Description/Description.scss
+++ b/src/components/hos/Footer/Description/Description.scss
@@ -2,11 +2,11 @@
     width: 85%;
     h2 {
         display: flex;
-        justify-content: center;
         align-items: center;
         margin-bottom: 1rem;
     }
     p {
         text-align: justify;
+        font-size: .8rem;
     }
 }
