--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -46,3 +46,23 @@
   align-items: center;
   color: rgb(231, 208, 165);
 }
+
+.card-actions {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 160px;
+  background: rgba(0, 0, 0, 0.6);
+  transform: translateY(100%);
+  transition: all 0.3s linear;
+}
+
+.card-actions {
+  img {
+    width: 50px;
+  }
+}
