--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -5,8 +5,8 @@
 .card-container {
   display: flex;
   align-items: center;
-  max-width: 600px;
-  margin-right: 1rem;
+  max-width: 555px;
+  // margin-right: 1rem;
   margin-bottom: 1rem;
   border-radius: 8px;
   -webkit-box-shadow: -2px 10px 29px -3px rgba(0, 0, 0, 0.33);
@@ -19,6 +19,7 @@
     #a2bac9,
     #e3f7ff
   );
+
 }
 
 .card-image {
@@ -73,4 +74,18 @@
 
 .action-button {
   background: none;
+}
+@media (max-width: 768px) {
+  .card-container{
+      width:calc(100% - 10px);
+      max-width: 400px;
+      margin: 10px auto;
+      }
+}
+@media (min-width: 768px) and (max-width:1200px){
+
+ .card-container{
+      width:calc(50% - 20px);
+      max-width: 500px;
+      }
 }
