--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   max-width: 500px;
+  height: 91px;
   // margin-right: 1rem;
   margin-bottom: 1rem;
   border-radius: 8px;
