--- a/src/components/hos/header/Name/Name.scss
+++ b/src/components/hos/header/Name/Name.scss
@@ -1,5 +1,7 @@
 .name {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    font-size: .9rem;
+    align-items: center;
 }
