copyright section updated

--- a/src/components/hos/Footer/copyright/copyright.scss
+++ b/src/components/hos/Footer/copyright/copyright.scss
@@ -9,7 +9,7 @@
         right: 2rem;
         left: 2rem;
     };
-    p {
+    span {
         font-size: .7rem;
         display: flex;
         flex-direction: row;
