--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,12 +1,28 @@
-.message{
-    height: 50px;
-    margin: 0 auto;
-    background: rgb(219, 88, 88);
-    padding: 10px;
-    border-radius: 5px;
+.messageContainer{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
-    p{
-         color: white;
-        font-size: 18px
+    .messageText{
+        width:50%;
+        height: 50px;
+        margin: 10px auto;
+        background: rgb(219, 88, 88);
+        padding: 10px;
+        border-radius: 5px;
+        text-align: center;
+        p{
+            color: white;
+            font-size: 18px
+       }
     }
+}
+.favoriteContainer{
+    width: 100%;
+    padding:50px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;    
 }
