--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -2,7 +2,6 @@
     width:100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
 
     .messageText{
         width:50%;
@@ -22,7 +21,7 @@
     width: 100%;
     padding:50px 10px;
     display: flex;
+    justify-content: start;
     flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;    
 }
