--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -20,7 +20,6 @@
     #a2bac9,
     #e3f7ff
   );
-
 }
 
 .card-image {
@@ -60,6 +59,21 @@
     h3 {
       font-size: 1.25rem;
     }
+  }
+}
+
+.link-button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 1rem;
+  &:hover {
+    opacity: 0.7;
   }
 }
 
