--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -60,15 +60,10 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 90px;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  height: 100%;
   background: rgba(0, 0, 0, 0.6);
   transform: translateY(100%);
   transition: all 0.3s linear;
-  img {
-    width: 50px;
-  }
 }
 
 .action-button {
