--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -5,8 +5,8 @@
 .card-container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 .card-image {
@@ -25,6 +25,7 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  line-height: 2.5rem;
   h3 {
     font-size: 1.25rem;
   }
