--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -1,7 +1,7 @@
 .card-container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
-  margin-bottom: 3%;
+  margin: 2%;
 }
 
 .card-image {
@@ -71,28 +71,28 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .card-container {
-    width: 100%;
+    width: 65%;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .card-container {
-    width: 45%;
+    width: 40%;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .card-container {
-    width: 45%;
+    width: 40%;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .card-container {
-    width: 45%;
+    width: 30%;
   }
 }
 
