--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -1,27 +1,27 @@
-.messageContainer{
-    width:100%;
-    display: flex;
-    flex-direction: row;
+.messageContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 
-    .messageText{
-        width:50%;
-        height: 50px;
-        margin: 10px auto;
-        background: rgb(219, 88, 88);
-        padding: 10px;
-        border-radius: 5px;
-        text-align: center;
-        p{
-            color: white;
-            font-size: 18px
-       }
+  .messageText {
+    width: 50%;
+    height: 50px;
+    margin: 10px auto;
+    background: rgb(219, 88, 88);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    p {
+      color: white;
+      font-size: 18px;
     }
+  }
 }
-.favoriteContainer{
-    width: 100%;
-    padding:50px 10px;
-    display: flex;
-    justify-content: start;
-    flex-direction: row;
-    flex-wrap: wrap;    
+.favoriteContainer {
+  width: 100%;
+  padding: 50px 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
