create style search-bar

--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -25,3 +25,16 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+
+////search-bar////
+
+.search-bar {
+  position: relative;
+  margin: 4% auto 0.5% auto;
+  left: 0;
+  right: 0;
+  width: 22%;
+  height: 25vh;
+
+}
