--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -29,6 +29,8 @@
 
 ////search-bar////
 
+$searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, rgba(0,212,255,1) 100%);
+
 .search-bar {
   position: relative;
   margin: 4% auto 0.5% auto;
@@ -37,4 +39,121 @@
   width: 22%;
   height: 25vh;
 
+  .search {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background: $searchColor;
+    border-radius: 50%;
+    transition: all 1s;
+    z-index: 4;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      margin: auto;
+      top: 22px;
+      right: 0;
+      bottom: 0;
+      left: 22px;
+      width: 12px;
+      height: 2px;
+      background: white;
+      transform: rotate(45deg);
+      transition: all 0.5s;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      margin: auto;
+      top: -5px;
+      right: 0;
+      bottom: 0;
+      left: -5px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      border: 2px solid white;
+      transition: all .5s;
+    }
+  }
+
+  .search-input{
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 50px;
+    height: 50px;
+    outline: none;
+    border: none;
+    background: $searchColor ;
+    color: white;
+    text-shadow: 0 0 10px $searchColor;
+    padding: 0 80px 0 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 25px 0 $searchColor;
+    transition: all 1s;
+    opacity: 0;
+    z-index: 5;
+    font-weight: bolder;
+    letter-spacing: 0.1em;
+
+    &:hover{
+      cursor: pointer
+    }
+
+    &:focus{
+      width: 300px;
+      opacity: 1;
+      cursor: text;
+    }
+
+    &:focus ~ .search{
+      right: -250px;
+      background: #004f7b;
+      z-index: 6;
+    }
+
+    &:focus ~ .search {
+      &:before {
+        top: 0;
+        left: 0;
+        width: 25px;
+      }
+    }
+
+    &:focus ~ .search {
+      &:after {
+        top: 0;
+        left: 0;
+        width: 25px;
+        height: 2px;
+        border: none;
+        background: white;
+        border-radius: 0;
+        transform: rotate(-45deg);
+      }
+    }
+
+    &::placeholder {
+      color: white;
+      opacity: 0.5;
+      font-weight: bolder;
+    }
+  }
 }
