fix responsive of search bar input

--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -36,8 +36,8 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
   margin: 4% auto 0.5% auto;
   left: 0;
   right: 0;
-  width: 22%;
-  height: 25vh;
+  width: 300px;
+  height: 100px;
 
   .search {
     position: absolute;
