fixing some styles

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -8,12 +8,12 @@ div.modal {
   display: flex;
   justify-content: center;
   align-items: center;
-
   transition: visibility 0s, opacity 0.2s ease-in-out;
+
   div.modal__container {
     background-color: #fff;
-    width: 40vw;
-    height: 30%;
+    width: 60vw;
+    height: auto;
     padding: 1.5rem;
     border-radius: 2rem;
     div.social-icons {
@@ -21,8 +21,8 @@ div.modal {
       justify-content: space-evenly;
       align-items: center;
       padding: 2rem;
-      h2 {
-        flex-basis: 100%;
+      * {
+        margin: auto 0.7rem;
       }
     }
   }
@@ -34,4 +34,13 @@ div.modal {
 .modal__deactive {
   visibility: hidden;
   opacity: 0;
+}
+
+@media (min-width: 300px) and (max-width: 368) {
+  div.social-icons {
+    padding: 0.7rem;
+    h2 {
+      font-size: 1.2rem;
+    }
+  }
 }
