--- a/src/components/hos/Footer/Description/Description.scss
+++ b/src/components/hos/Footer/Description/Description.scss
@@ -1,3 +1,18 @@
+@media only screen and (min-width : 320px){
+    .description {
+        width: 85%;
+        h2 {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
+        p {
+            text-align: justify;
+            font-size: .8rem;
+        }
+    }
+}
+
 .description {
     width: 85%;
     h2 {
