--- a/src/components/hos/Footer/socialMedia/socialMedia.scss
+++ b/src/components/hos/Footer/socialMedia/socialMedia.scss
@@ -1,24 +1,56 @@
-.footer__social__media {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    a {
-        cursor: pointer;
+@media only screen and (min-width : 320px) {
+    .footer__social__media {
+        display: block;
+        justify-content: space-evenly;
+        align-items: center;
+        a {
+            cursor: pointer;
+        }
+        .facebook {
+            width: 1rem;
+            height: 1rem;
+        }
+        .instagram {
+            width: 1rem;
+            height: 1rem;
+        }
+        .telegram {
+            width: 1rem;
+            height: 1rem;
+        }
+        .youtube {
+            width: 1rem;
+            height: 1rem;
+        }
     }
-    .facebook {
-        width: 2rem;
-        height: 10rem;
-    }
-    .instagram {
-        width: 2rem;
-        height: 10rem;
-    }
-    .telegram {
-        width: 2rem;
-        height: 10rem;
-    }
-    .youtube {
-        width: 2rem;
-        height: 10rem;
+}
+
+@media only screen and (min-width : 768px) {
+    .footer__social__media {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        a {
+            cursor: pointer;
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .facebook {
+            width: 2rem;
+            height: 10rem;
+        }
+        .instagram {
+            width: 2rem;
+            height: 10rem;
+        }
+        .telegram {
+            width: 2rem;
+            height: 10rem;
+        }
+        .youtube {
+            width: 2rem;
+            height: 10rem;
+        }
     }
 }
