--- a/src/components/hos/header/header.scss
+++ b/src/components/hos/header/header.scss
@@ -28,7 +28,7 @@ $color: #fff;
             left: auto;
         }
         display: grid;
-        grid-template-columns: 2fr 1fr 5fr 2fr 4fr;
+        grid-template-columns: 2fr 5fr 2fr 4fr;
         padding: {
             top: .5rem;
             right: .5rem;
@@ -49,7 +49,7 @@ $color: #fff;
             left: auto;
         }
         display: grid;
-        grid-template-columns: 2fr 1fr 5fr 2fr 4fr;
+        grid-template-columns: 2fr 5fr 2fr 4fr;
         padding: {
             top: .5rem;
             right: .5rem;
@@ -70,7 +70,7 @@ $color: #fff;
             left: auto;
         }
         display: grid;
-        grid-template-columns: 2fr 1fr 5fr 2fr 4fr;
+        grid-template-columns: 2fr 5fr 2fr 4fr;
         padding: {
             top: .5rem;
             right: .5rem;
@@ -91,7 +91,7 @@ $color: #fff;
             left: auto;
         }
         display: grid;
-        grid-template-columns: 2fr 1fr 5fr 2fr 4fr;
+        grid-template-columns: 2fr 5fr 2fr 4fr;
         padding: {
             top: .5rem;
             right: .5rem;
