--- a/src/components/hos/Footer/Description/Description.scss
+++ b/src/components/hos/Footer/Description/Description.scss
@@ -1,5 +1,24 @@
 @media only screen and (min-width : 320px){
     .description {
+        width: 90%;
+        margin: .6rem auto;
+        h2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 1rem auto;
+            font-size: 1rem;
+        }
+        p {
+            text-align: justify;
+            font-size: .6rem;
+            margin: .8rem auto;
+        }
+    }
+}
+
+@media only screen and (min-width : 769px){
+    .description {
         width: 85%;
         h2 {
             display: flex;
@@ -10,18 +29,5 @@
             text-align: justify;
             font-size: .8rem;
         }
-    }
-}
-
-.description {
-    width: 85%;
-    h2 {
-        display: flex;
-        align-items: center;
-        margin-bottom: 1rem;
-    }
-    p {
-        text-align: justify;
-        font-size: .8rem;
     }
 }
