--- a/src/components/hos/Footer/copyright/copyright.scss
+++ b/src/components/hos/Footer/copyright/copyright.scss
@@ -1,17 +1,62 @@
-.footer__copy__right {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: {
-        top: 0;
-        bottom: 0;
-        right: 2rem;
-        left: 2rem;
-    };
-    span {
-        font-size: .7rem;
-        display: flex;
+@media only screen and (min-width : 320px){
+    .footer__copy__right {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
         flex-direction: row;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding: {
+            top: 0;
+            bottom: 0;
+            right: 1rem;
+            left: 1rem;
+        };
+        span:nth-child(1){
+            font-size: .5rem;
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+        }
+        span:nth-child(2){
+            font-size: .5rem;
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+}
+
+@media only screen and (min-width : 769px){
+    .footer__copy__right {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        padding: {
+            top: 0;
+            bottom: 0;
+            right: 2rem;
+            left: 2rem;
+        };
+        span:nth-child(1) {
+            font-size: .7rem;
+            display: flex;
+            flex-direction: row;
+            direction: rtl;
+            width: 100%;
+        }
+        span:nth-child(2) {
+            font-size: .7rem;
+            display: flex;
+            flex-direction: row;
+            direction: ltr;
+            width: 100%;
+        }
     }
 }
