--- a/src/components/hos/Footer/socialMedia/socialMedia.scss
+++ b/src/components/hos/Footer/socialMedia/socialMedia.scss
@@ -1,10 +1,11 @@
 @media only screen and (min-width : 320px) {
     .footer__social__media {
-        display: block;
-        justify-content: space-evenly;
+        display: flex;
+        justify-content: center;
         align-items: center;
         a {
             cursor: pointer;
+            padding: 0 1rem;
         }
         .facebook {
             width: 1rem;
@@ -28,8 +29,8 @@
 @media only screen and (min-width : 768px) {
     .footer__social__media {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
+        flex-wrap: nowrap;
+        justify-content: center;
         align-items: center;
         a {
             cursor: pointer;
