--- a/src/pages/people/style.scss
+++ b/src/pages/people/style.scss
@@ -8,7 +8,6 @@
 }
 
 .details {
-  margin-left: 20px;
   color: #07b39b;
   margin: 20px;
   display: block;
@@ -44,9 +43,7 @@
   height: 400px;
   background-color: rgba(19, 22, 31, 255);
   box-shadow: rgba(15, 15, 23, 255) 1px 3px 8px;
-  padding: 15px;
-  padding-top: 2px;
-  padding-left: 0.8em;
+  padding: 2px 15px 15px 0.8em;
 }
 
 .fav {
