improved card style

--- a/src/pages/peoples/peoples.scss
+++ b/src/pages/peoples/peoples.scss
@@ -1,9 +1,10 @@
 .peoplesContainer {
-  width: 100%;
+  width: 80%;
   padding: 50px 10px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: auto;
 }
 
 /* Extra small devices (phones, 600px and down) */
