--- a/src/pages/favorites/favorites.scss
+++ b/src/pages/favorites/favorites.scss
@@ -18,18 +18,23 @@
   }
 }
 .favoriteContainer {
-  width: 100%;
+  width: 80%;
   padding: 50px 10px;
   display: flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: auto;
 }
-
 
 ////search-bar////
 
-$searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, rgba(0,212,255,1) 100%);
+$searchColor: linear-gradient(
+  90deg,
+  rgba(2, 0, 36, 1) 0%,
+  rgba(81, 105, 130, 1) 35%,
+  rgba(0, 212, 255, 1) 100%
+);
 
 .search-bar {
   position: relative;
@@ -85,11 +90,11 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
       height: 25px;
       border-radius: 50%;
       border: 2px solid white;
-      transition: all .5s;
+      transition: all 0.5s;
     }
   }
 
-  .search-input{
+  .search-input {
     position: absolute;
     margin: auto;
     top: 0;
@@ -101,7 +106,7 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
     height: 50px;
     outline: none;
     border: none;
-    background: $searchColor ;
+    background: $searchColor;
     color: white;
     text-shadow: 0 0 10px $searchColor;
     padding: 0 80px 0 20px;
@@ -113,17 +118,17 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
     font-weight: bolder;
     letter-spacing: 0.1em;
 
-    &:hover{
-      cursor: pointer
+    &:hover {
+      cursor: pointer;
     }
 
-    &:focus{
+    &:focus {
       width: 300px;
       opacity: 1;
       cursor: text;
     }
 
-    &:focus ~ .search{
+    &:focus ~ .search {
       right: -250px;
       background: #004f7b;
       z-index: 6;
@@ -158,7 +163,6 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
   }
 }
 
-
 .search-bar-loading {
   position: absolute;
   width: 600px;
@@ -174,7 +178,6 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
 }
 
 .search-bar-loading {
-
   div {
     position: absolute;
     width: 20px;
@@ -189,7 +192,7 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
     -o-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
-    color: #35C4F0;
+    color: #35c4f0;
 
     &:nth-child(2) {
       animation-delay: 0.2s;
@@ -237,106 +240,106 @@ $searchColor:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(81,105,130,1) 35%, r
 
 @keyframes move {
   0% {
-    left:0;
-    opacity:0;
+    left: 0;
+    opacity: 0;
   }
   35% {
     left: 41%;
-    -moz-transform:rotate(0deg);
-    -webkit-transform:rotate(0deg);
-    -o-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   65% {
-    left:59%;
-    -moz-transform:rotate(0deg);
-    -webkit-transform:rotate(0deg);
-    -o-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 59%;
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   100% {
-    left:100%;
-    -moz-transform:rotate(-180deg);
-    -webkit-transform:rotate(-180deg);
-    -o-transform:rotate(-180deg);
-    transform:rotate(-180deg);
-    opacity:0;
+    left: 100%;
+    -moz-transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    opacity: 0;
   }
 }
 
 @-moz-keyframes move {
   0% {
-    left:0;
-    opacity:0;
+    left: 0;
+    opacity: 0;
   }
   35% {
-    left:41%;
-    -moz-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 41%;
+    -moz-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   65% {
-    left:59%;
-    -moz-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 59%;
+    -moz-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   100% {
-    left:100%;
-    -moz-transform:rotate(-180deg);
-    transform:rotate(-180deg);
-    opacity:0;
+    left: 100%;
+    -moz-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    opacity: 0;
   }
 }
 
 @-webkit-keyframes move {
   0% {
-    left:0;
-    opacity:0;
+    left: 0;
+    opacity: 0;
   }
   35% {
-    left:41%;
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 41%;
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   65% {
-    left:59%;
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 59%;
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   100% {
-    left:100%;
-    -webkit-transform:rotate(-180deg);
-    transform:rotate(-180deg);
-    opacity:0;
+    left: 100%;
+    -webkit-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    opacity: 0;
   }
 }
 
 @-o-keyframes move {
   0% {
-    left:0;
-    opacity:0;
+    left: 0;
+    opacity: 0;
   }
   35% {
-    left:41%;
-    -o-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 41%;
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   65% {
-    left:59%;
-    -o-transform:rotate(0deg);
-    transform:rotate(0deg);
-    opacity:1;
+    left: 59%;
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    opacity: 1;
   }
   100% {
-    left:100%;
-    -o-transform:rotate(-180deg);
-    transform:rotate(-180deg);
-    opacity:0;
+    left: 100%;
+    -o-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+    opacity: 0;
   }
 }
