--- a/src/components/card/cardStyles.scss
+++ b/src/components/card/cardStyles.scss
@@ -2,6 +2,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   margin: 2%;
+  background-color: rgb(255, 255, 255);
 }
 
 .card-image {
